Refactor: update dependencies and improve error handling in cover art extraction